[package]
name = "grrs_test"
version = "0.1.0"
authors = ["zhaijunfeng2012@gmail.com"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/xiaonaoer/grrs_test"
repository = "https://github.com/xiaonaoer/grrs_test"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
structopt = "0.3.13"
wasm-bindgen = "0.2.68"
